--- a/DL/cnn.ipynb
+++ b/DL/cnn.ipynb
@@ -2955,7 +2955,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -2964,7 +2964,7 @@
        "'2.15.0'"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3019,12 +3019,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "ROOT = \"./Vegetable Images\"\n",
-    "CLASSES = os.listdir(ROOT+\"/train\")\n",
+    "CLASSES = ['Broccoli','Capsicum','Bottle_Gourd','Radish','Tomato','Brinjal','Pumpkin','Carrot','Papaya','Cabbage','Bitter_Gourd','Cauliflower','Bean','Cucumber','Potato']\n",
     "tfClasses = tf.constant(CLASSES)\n",
     "TRAIN = tf.data.Dataset.list_files(f\"{ROOT}/train/*/*\")\n",
     "TEST = tf.data.Dataset.list_files(f\"{ROOT}/test/*/*\")\n",
@@ -3034,7 +3034,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3058,7 +3058,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3073,7 +3073,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3108,27 +3108,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "train_ori_large = TRAIN.map(createPreprocessor(128))\n",
     "train_aug_large = TRAIN.map(createPreprocessor(128)).map(augmentation)\n",
     "train_large_ds = train_ori_large.concatenate(train_aug_large)\n",
-    "#train_large = configure_for_performance(train_large_ds)\n",
     "\n",
     "test_large_ds = TEST.map(createPreprocessor(128))\n",
     "val_large_ds = VAL.map(createPreprocessor(128))\n",
-    "#test_large = configure_for_performance(test_large_ds)\n",
-    "#val_large = configure_for_performance(val_large_ds)\n",
     "\n",
     "data = train_large_ds.concatenate(test_large_ds).concatenate(val_large_ds)\n",
-    "data = configure_for_performance(data)"
+    "data = configure_for_performance(data)\n",
+    "\n",
+    "train_ori_small = TRAIN.map(createPreprocessor(31))\n",
+    "train_aug_small = TRAIN.map(createPreprocessor(31)).map(augmentation)\n",
+    "train_small_ds = train_ori_small.concatenate(train_aug_small)\n",
+    "\n",
+    "test_small_ds = TEST.map(createPreprocessor(31))\n",
+    "val_small_ds = VAL.map(createPreprocessor(31))\n",
+    "\n",
+    "data_small = train_small_ds.concatenate(test_small_ds).concatenate(val_small_ds)\n",
+    "data_small = configure_for_performance(data_small)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3225,6 +3232,38 @@
     "        x = self.pool(x)\n",
     "        \n",
     "        x = self.convPatch(x)\n",
+    "        \n",
+    "        x = self.embedding(x)\n",
+    "        for i in range(self.transformer_count):\n",
+    "            x = self.transformer(x)\n",
+    "        x = self.normalise(x)\n",
+    "        weights = self.dense(x)\n",
+    "        weights =  tf.nn.softmax(weights,axis=1)\n",
+    "        x = tf.matmul(weights,x, transpose_a=True)\n",
+    "        x = tf.squeeze(x, -2)\n",
+    "        prediction = self.classifier(x)\n",
+    "        return prediction"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class ConvTransformerTry(keras.Model):\n",
+    "    def __init__(self, patch_size, image_size, embedding,transformer_layers,conv_layers,transformer_count):\n",
+    "        super().__init__()\n",
+    "        self.convPatch = ConvolutionalPatching(conv_layers)\n",
+    "        self.conv = Convolution_Model(conv_layers)\n",
+    "        self.embedding = AddPosEmbedding(image_size,self.conv)\n",
+    "        self.transformer = Transformer(4, 64, transformer_layers,0.1)\n",
+    "        self.normalise = LayerNormalization(epsilon=1e-6)\n",
+    "        self.dense = Dense(1)\n",
+    "        self.classifier = Dense(15)\n",
+    "        self.transformer_count = transformer_count\n",
+    "    def call(self,images):\n",
+    "        x = self.convPatch(images)\n",
     "        \n",
     "        x = self.embedding(x)\n",
     "        for i in range(self.transformer_count):\n",
@@ -3376,6 +3415,152 @@
     "model2 = tf.keras.models.load_model(\"final_large2.keras\",\n",
     "                    custom_objects={\"SmallerConvTransformer\": SmallerConvTransformer})"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "I will now be training the small model as well. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/30\n",
+      "WARNING:tensorflow:Gradients do not exist for variables ['conv2d_10/kernel:0', 'conv2d_11/kernel:0'] when minimizing the loss. If you're using `model.compile()`, did you forget to provide a `loss` argument?\n",
+      "WARNING:tensorflow:Gradients do not exist for variables ['conv2d_10/kernel:0', 'conv2d_11/kernel:0'] when minimizing the loss. If you're using `model.compile()`, did you forget to provide a `loss` argument?\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2024-01-16 21:32:25.085337: I tensorflow/core/grappler/optimizers/custom_graph_optimizer_registry.cc:117] Plugin optimizer for device_type GPU is enabled.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "752/752 [==============================] - ETA: 0s - loss: 2.1907WARNING:tensorflow:Learning rate reduction is conditioned on metric `val_loss` which is not available. Available metrics are: loss,lr\n",
+      "752/752 [==============================] - 70s 89ms/step - loss: 2.1907 - lr: 0.0010\n",
+      "Epoch 2/30\n",
+      "752/752 [==============================] - ETA: 0s - loss: 1.5459WARNING:tensorflow:Learning rate reduction is conditioned on metric `val_loss` which is not available. Available metrics are: loss,lr\n",
+      "752/752 [==============================] - 66s 87ms/step - loss: 1.5459 - lr: 0.0010\n",
+      "Epoch 3/30\n",
+      "752/752 [==============================] - ETA: 0s - loss: 1.2311WARNING:tensorflow:Learning rate reduction is conditioned on metric `val_loss` which is not available. Available metrics are: loss,lr\n",
+      "752/752 [==============================] - 66s 88ms/step - loss: 1.2311 - lr: 0.0010\n",
+      "Epoch 4/30\n",
+      "752/752 [==============================] - ETA: 0s - loss: 1.0325WARNING:tensorflow:Learning rate reduction is conditioned on metric `val_loss` which is not available. Available metrics are: loss,lr\n",
+      "752/752 [==============================] - 66s 88ms/step - loss: 1.0325 - lr: 0.0010\n",
+      "Epoch 5/30\n",
+      "752/752 [==============================] - ETA: 0s - loss: 0.9194WARNING:tensorflow:Learning rate reduction is conditioned on metric `val_loss` which is not available. Available metrics are: loss,lr\n",
+      "752/752 [==============================] - 66s 88ms/step - loss: 0.9194 - lr: 0.0010\n",
+      "Epoch 6/30\n",
+      "752/752 [==============================] - ETA: 0s - loss: 0.8180WARNING:tensorflow:Learning rate reduction is conditioned on metric `val_loss` which is not available. Available metrics are: loss,lr\n",
+      "752/752 [==============================] - 67s 89ms/step - loss: 0.8180 - lr: 0.0010\n",
+      "Epoch 7/30\n",
+      "752/752 [==============================] - ETA: 0s - loss: 0.7499WARNING:tensorflow:Learning rate reduction is conditioned on metric `val_loss` which is not available. Available metrics are: loss,lr\n",
+      "752/752 [==============================] - 67s 88ms/step - loss: 0.7499 - lr: 0.0010\n",
+      "Epoch 8/30\n",
+      "752/752 [==============================] - ETA: 0s - loss: 0.6858WARNING:tensorflow:Learning rate reduction is conditioned on metric `val_loss` which is not available. Available metrics are: loss,lr\n",
+      "752/752 [==============================] - 66s 88ms/step - loss: 0.6858 - lr: 0.0010\n",
+      "Epoch 9/30\n",
+      "752/752 [==============================] - ETA: 0s - loss: 0.6219WARNING:tensorflow:Learning rate reduction is conditioned on metric `val_loss` which is not available. Available metrics are: loss,lr\n",
+      "752/752 [==============================] - 65s 87ms/step - loss: 0.6219 - lr: 0.0010\n",
+      "Epoch 10/30\n",
+      "752/752 [==============================] - ETA: 0s - loss: 0.5804WARNING:tensorflow:Learning rate reduction is conditioned on metric `val_loss` which is not available. Available metrics are: loss,lr\n",
+      "752/752 [==============================] - 65s 87ms/step - loss: 0.5804 - lr: 0.0010\n",
+      "Epoch 11/30\n",
+      "752/752 [==============================] - ETA: 0s - loss: 0.5421WARNING:tensorflow:Learning rate reduction is conditioned on metric `val_loss` which is not available. Available metrics are: loss,lr\n",
+      "752/752 [==============================] - 66s 87ms/step - loss: 0.5421 - lr: 0.0010\n",
+      "Epoch 12/30\n",
+      "752/752 [==============================] - ETA: 0s - loss: 0.5204WARNING:tensorflow:Learning rate reduction is conditioned on metric `val_loss` which is not available. Available metrics are: loss,lr\n",
+      "752/752 [==============================] - 65s 86ms/step - loss: 0.5204 - lr: 0.0010\n",
+      "Epoch 13/30\n",
+      "752/752 [==============================] - ETA: 0s - loss: 0.4952WARNING:tensorflow:Learning rate reduction is conditioned on metric `val_loss` which is not available. Available metrics are: loss,lr\n",
+      "752/752 [==============================] - 65s 87ms/step - loss: 0.4952 - lr: 0.0010\n",
+      "Epoch 14/30\n",
+      "752/752 [==============================] - ETA: 0s - loss: 0.4542WARNING:tensorflow:Learning rate reduction is conditioned on metric `val_loss` which is not available. Available metrics are: loss,lr\n",
+      "752/752 [==============================] - 66s 88ms/step - loss: 0.4542 - lr: 0.0010\n",
+      "Epoch 15/30\n",
+      "752/752 [==============================] - ETA: 0s - loss: 0.4401WARNING:tensorflow:Learning rate reduction is conditioned on metric `val_loss` which is not available. Available metrics are: loss,lr\n",
+      "752/752 [==============================] - 67s 89ms/step - loss: 0.4401 - lr: 0.0010\n",
+      "Epoch 16/30\n",
+      "752/752 [==============================] - ETA: 0s - loss: 0.4147WARNING:tensorflow:Learning rate reduction is conditioned on metric `val_loss` which is not available. Available metrics are: loss,lr\n",
+      "752/752 [==============================] - 67s 89ms/step - loss: 0.4147 - lr: 0.0010\n",
+      "Epoch 17/30\n",
+      "752/752 [==============================] - ETA: 0s - loss: 0.3946WARNING:tensorflow:Learning rate reduction is conditioned on metric `val_loss` which is not available. Available metrics are: loss,lr\n",
+      "752/752 [==============================] - 68s 91ms/step - loss: 0.3946 - lr: 0.0010\n",
+      "Epoch 18/30\n",
+      "752/752 [==============================] - ETA: 0s - loss: 0.3798WARNING:tensorflow:Learning rate reduction is conditioned on metric `val_loss` which is not available. Available metrics are: loss,lr\n",
+      "752/752 [==============================] - 67s 89ms/step - loss: 0.3798 - lr: 0.0010\n",
+      "Epoch 19/30\n",
+      "752/752 [==============================] - ETA: 0s - loss: 0.3648WARNING:tensorflow:Learning rate reduction is conditioned on metric `val_loss` which is not available. Available metrics are: loss,lr\n",
+      "752/752 [==============================] - 62s 82ms/step - loss: 0.3648 - lr: 0.0010\n",
+      "Epoch 20/30\n",
+      "752/752 [==============================] - ETA: 0s - loss: 0.3405WARNING:tensorflow:Learning rate reduction is conditioned on metric `val_loss` which is not available. Available metrics are: loss,lr\n",
+      "752/752 [==============================] - 62s 83ms/step - loss: 0.3405 - lr: 0.0010\n",
+      "Epoch 21/30\n",
+      "752/752 [==============================] - ETA: 0s - loss: 0.3211WARNING:tensorflow:Learning rate reduction is conditioned on metric `val_loss` which is not available. Available metrics are: loss,lr\n",
+      "752/752 [==============================] - 60s 80ms/step - loss: 0.3211 - lr: 0.0010\n",
+      "Epoch 22/30\n",
+      "752/752 [==============================] - ETA: 0s - loss: 0.3197WARNING:tensorflow:Learning rate reduction is conditioned on metric `val_loss` which is not available. Available metrics are: loss,lr\n",
+      "752/752 [==============================] - 61s 81ms/step - loss: 0.3197 - lr: 0.0010\n",
+      "Epoch 23/30\n",
+      "752/752 [==============================] - ETA: 0s - loss: 0.3009WARNING:tensorflow:Learning rate reduction is conditioned on metric `val_loss` which is not available. Available metrics are: loss,lr\n",
+      "752/752 [==============================] - 61s 82ms/step - loss: 0.3009 - lr: 0.0010\n",
+      "Epoch 24/30\n",
+      "752/752 [==============================] - ETA: 0s - loss: 0.2881WARNING:tensorflow:Learning rate reduction is conditioned on metric `val_loss` which is not available. Available metrics are: loss,lr\n",
+      "752/752 [==============================] - 60s 80ms/step - loss: 0.2881 - lr: 0.0010\n",
+      "Epoch 25/30\n",
+      "752/752 [==============================] - ETA: 0s - loss: 0.2785WARNING:tensorflow:Learning rate reduction is conditioned on metric `val_loss` which is not available. Available metrics are: loss,lr\n",
+      "752/752 [==============================] - 62s 82ms/step - loss: 0.2785 - lr: 0.0010\n",
+      "Epoch 26/30\n",
+      "752/752 [==============================] - ETA: 0s - loss: 0.2570WARNING:tensorflow:Learning rate reduction is conditioned on metric `val_loss` which is not available. Available metrics are: loss,lr\n",
+      "752/752 [==============================] - 61s 81ms/step - loss: 0.2570 - lr: 0.0010\n",
+      "Epoch 27/30\n",
+      "752/752 [==============================] - ETA: 0s - loss: 0.2521WARNING:tensorflow:Learning rate reduction is conditioned on metric `val_loss` which is not available. Available metrics are: loss,lr\n",
+      "752/752 [==============================] - 60s 80ms/step - loss: 0.2521 - lr: 0.0010\n",
+      "Epoch 28/30\n",
+      "752/752 [==============================] - ETA: 0s - loss: 0.2479WARNING:tensorflow:Learning rate reduction is conditioned on metric `val_loss` which is not available. Available metrics are: loss,lr\n",
+      "752/752 [==============================] - 60s 80ms/step - loss: 0.2479 - lr: 0.0010\n",
+      "Epoch 29/30\n",
+      "752/752 [==============================] - ETA: 0s - loss: 0.2396WARNING:tensorflow:Learning rate reduction is conditioned on metric `val_loss` which is not available. Available metrics are: loss,lr\n",
+      "752/752 [==============================] - 61s 82ms/step - loss: 0.2396 - lr: 0.0010\n",
+      "Epoch 30/30\n",
+      "752/752 [==============================] - ETA: 0s - loss: 0.2212WARNING:tensorflow:Learning rate reduction is conditioned on metric `val_loss` which is not available. Available metrics are: loss,lr\n",
+      "752/752 [==============================] - 61s 82ms/step - loss: 0.2212 - lr: 0.0010\n"
+     ]
+    }
+   ],
+   "source": [
+    "reduce_lr = tf.keras.callbacks.ReduceLROnPlateau(monitor='val_loss', factor=0.5, patience=1, min_lr=1e-6)\n",
+    "\n",
+    "final_31 = ConvTransformerTry(12,31,32,[64,64],[32,64],2)\n",
+    "\n",
+    "final_31.compile(\n",
+    "        optimizer=\"adam\",\n",
+    "        loss= keras.losses.CategoricalCrossentropy(from_logits=True)\n",
+    "    )\n",
+    "\n",
+    "history = final_31.fit(\n",
+    "    data_small, epochs=30, callbacks=[reduce_lr]\n",
+    ")\n",
+    "\n",
+    "final_31.save('final_small.keras')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
