Related to #35, setup S3 with necessary images and paths

--- a/test.ipynb
+++ b/test.ipynb
@@ -185,6 +185,80 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "trying to upload images to s3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['vgdb_11.jpg', 'vgdb_15.jpg', 'vgdb_04.jpg', 'vgdb_05.jpg', 'vgdb_07.jpg', 'vgdb_09.jpg', 'vgdb_08.jpg', 'vgdb_14.jpg', 'vgdb_06.jpg', 'vgdb_13.jpg', 'vgdb_12.jpg', 'vgdb_03.jpg', 'vgdb_02.jpg', 'vgdb_10.jpg', 'vgdb_01.jpg']\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "\n",
+    "vegeDB = os.listdir(\"./temp_imgs/\")\n",
+    "\n",
+    "vegeDB.remove(\".DS_Store\")\n",
+    "print(vegeDB)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import boto3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Uploaded vgdb_11.jpg\n",
+      "Uploaded vgdb_15.jpg\n",
+      "Uploaded vgdb_04.jpg\n",
+      "Uploaded vgdb_05.jpg\n",
+      "Uploaded vgdb_07.jpg\n",
+      "Uploaded vgdb_09.jpg\n",
+      "Uploaded vgdb_08.jpg\n",
+      "Uploaded vgdb_14.jpg\n",
+      "Uploaded vgdb_06.jpg\n",
+      "Uploaded vgdb_13.jpg\n",
+      "Uploaded vgdb_12.jpg\n",
+      "Uploaded vgdb_03.jpg\n",
+      "Uploaded vgdb_02.jpg\n",
+      "Uploaded vgdb_10.jpg\n",
+      "Uploaded vgdb_01.jpg\n"
+     ]
+    }
+   ],
+   "source": [
+    "s3 = boto3.resource(\"s3\")\n",
+    "imgBucket = s3.Bucket(\"devops-ca2\")\n",
+    "for i in vegeDB:\n",
+    "    path = os.path.join(\"temp_imgs\",i)\n",
+    "    imgBucket.upload_file(path,i)\n",
+    "    print(f\"Uploaded {i}\")"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
