Closes #67, history and search works

--- a/test.ipynb
+++ b/test.ipynb
@@ -259,6 +259,27 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1- brocolli\n",
+    "2 - capsicum\n",
+    "3- bottle gourd\n",
+    "4- radish?\n",
+    "5 - tomato\n",
+    "6 - brinjal\n",
+    "7-pumpkin\n",
+    "8 - carrot\n",
+    "9 - papaya\n",
+    "10 - cabbage\n",
+    "11 - Bitter gourd\n",
+    "12 - cauliflower\n",
+    "13 - bean\n",
+    "14 - cucumber\n",
+    "15 - potato"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
